[gd_scene load_steps=9 format=3 uid="uid://bfk7wccmsndfr"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7me6c"]
[ext_resource type="StyleBox" uid="uid://bxwylw4uk8cyk" path="res://assets/styles/ClassSettingsBG.tres" id="2_56yd5"]
[ext_resource type="Script" uid="uid://01ronclpv10b" path="res://panels/Programmer/ParameterController/ParameterController.gd" id="3_437gf"]
[ext_resource type="Texture2D" uid="uid://dyd2xybu6duv4" path="res://assets/icons/NewWindow.svg" id="4_sjuwc"]
[ext_resource type="Texture2D" uid="uid://dlikb8or3xepr" path="res://assets/icons/Reset.svg" id="4_ukk8e"]
[ext_resource type="Texture2D" uid="uid://c0lqh3h58ht3c" path="res://assets/icons/Random.svg" id="5_sjuwc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjuwc"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.129458, 0.129458, 0.129458, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_sjuwc"]
font_size = 10

[node name="ParameterController" type="PanelContainer" node_paths=PackedStringArray("_function_list", "_slider", "_name_label", "_zone_label", "_title_bar")]
custom_minimum_size = Vector2(219, 0)
offset_right = 304.0
offset_bottom = 425.0
theme = ExtResource("1_7me6c")
theme_override_styles/panel = ExtResource("2_56yd5")
script = ExtResource("3_437gf")
_function_list = NodePath("VBoxContainer/PanelContainer2/HBoxContainer/OptionButton")
_slider = NodePath("VBoxContainer/PanelContainer3/HBoxContainer/VSlider")
_name_label = NodePath("VBoxContainer/TitleBar/HBoxContainer/VBoxContainer/NameLabel")
_zone_label = NodePath("VBoxContainer/TitleBar/HBoxContainer/VBoxContainer/ZoneLabel")
_title_bar = NodePath("VBoxContainer/TitleBar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sjuwc")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleBar"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/TitleBar/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dimmer"
text_overrun_behavior = 3

[node name="ZoneLabel" type="Label" parent="VBoxContainer/TitleBar/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dimmer"
label_settings = SubResource("LabelSettings_sjuwc")
text_overrun_behavior = 3

[node name="Erase" type="Button" parent="VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_sjuwc")

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSlider" type="VSlider" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 20
ticks_on_borders = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/PanelContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer3/HBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Open"

[node name="Button5" type="Button" parent="VBoxContainer/PanelContainer3/HBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Close"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Erace" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_ukk8e")

[node name="Random" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_sjuwc")

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[connection signal="value_changed" from="VBoxContainer/PanelContainer3/HBoxContainer/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/Erace" to="." method="_on_erase_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/Random" to="." method="_on_random_pressed"]
